--- a/front-end/src/components/styles/molecules/AppBar.scss
+++ b/front-end/src/components/styles/molecules/AppBar.scss
@@ -8,14 +8,14 @@
   }
   .slider-element {
     // margin: 10px;
-    height: 300px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     // position: absolute;
     // top: 200px;
     // background-color: grey;
-    border-bottom: 2px solid black;
+    // border-bottom: 2px solid black;
     z-index: -1;
   }
 }
