Front_end touch up

--- a/front-end/src/components/styles/molecules/AppBar.scss
+++ b/front-end/src/components/styles/molecules/AppBar.scss
@@ -3,8 +3,9 @@
   height: 64px;
   z-index: 99;
   .navbar-element {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
   }
   .slider-element {
     // margin: 10px;
