--- a/front-end/src/components/styles/organisms/BottomSection.scss
+++ b/front-end/src/components/styles/organisms/BottomSection.scss
@@ -1,19 +1,29 @@
 .bottom-section {
   display: flex;
-  justify-content: space-around;
-  height: 300px;
+  align-items: center;
+  flex-direction: column;
+  // height: 300px;
   width: 100%;
   background-color: white;
   .items {
+    display: inline-block;
     // background-color: red;
     padding-top: 70px;
     display: flex;
     flex-direction: "row";
     justify-content: space-around;
     width: 80%;
+    // margin-bottom: 200px;
     height: 100%;
     .item {
       text-align: left;
     }
+  }
+  .slider {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
   }
 }
