--- a/front-end/src/components/styles/organisms/BottomSection.scss
+++ b/front-end/src/components/styles/organisms/BottomSection.scss
@@ -9,7 +9,7 @@
     display: inline-block;
     // background-color: red;
     padding-top: 70px;
-    padding-bottom: 70px;
+    // padding-bottom: 70px;
     display: flex;
     flex-direction: "row";
     justify-content: space-around;
